--- a/.travis.yml
+++ b/.travis.yml
@@ -17,12 +17,16 @@ php:
   - 7.2
 
 env:
-  - WP_VERSION=latest WP_MULTISITE=0
+  - WP_VERSION=latest WP_MULTISITE=0 CUSTOM_CONSTANTS=0
 
 matrix:
   include:
     - php: 5.6
       env: WP_VERSION=latest WP_MULTISITE=1
+    - php: 7.2
+      env: WP_VERSION=latest WP_MULTISITE=1 CUSTOM_CONSTANTS=1
+    - php: 7.2
+      env: WP_VERSION=latest WP_MULTISITE=0 CUSTOM_CONSTANTS=1
 
 install:
     # flags to pass to install
