make sure /coverage folder doesn't end up where it doesn't have to [ci skip]

--- a/.gitattributes
+++ b/.gitattributes
@@ -14,5 +14,6 @@
 /tests export-ignore
 /bin export-ignore
 /vendor export-ignore
+/coverage export-ignore
 /composer.json export-ignore
 /composer.lock export-ignore
