--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,13 @@
         "issues": "https://wordpress.org/support/plugin/autoptimize"
     },
     "require": {
-        "php": ">=5.3"
+        "php": ">=5.6"
     },
     "require-dev": {
         "php": ">=5.6",
         "dealerdirect/phpcodesniffer-composer-installer": "^0.4.2",
         "squizlabs/php_codesniffer": "^3.1",
-        "phpunit/phpunit": "^5.7.27",
+        "phpunit/phpunit": "5.7.*",
         "wimg/php-compatibility": "*",
         "wp-coding-standards/wpcs": "*"
     },
