--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,6 @@ before_script:
   # install wp tests infra
   - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
   # print what's installed and where by default
-  - which phpunit && phpunit --version
+  # - which phpunit && phpunit --version
 
 script: ./vendor/bin/phpunit
