--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "php": ">=5.6",
         "dealerdirect/phpcodesniffer-composer-installer": "^0.4.2",
         "squizlabs/php_codesniffer": "^3.1",
-        "phpunit/phpunit": "5.7.*",
+        "phpunit/phpunit": "^5.7.27",
         "wimg/php-compatibility": "*",
         "wp-coding-standards/wpcs": "*"
     },
