--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ php:
   - 7.2
   - 7.3
   - 7.4
+  - 8.0
 
 env:
   - WP_VERSION=latest WP_MULTISITE=0 CUSTOM_CONSTANTS=0
@@ -35,6 +36,7 @@ install:
     - flags="--ansi --prefer-dist --no-interaction --optimize-autoloader --no-suggest --no-progress"
     # install dependencies using system provided composer binary
     - composer install $flags
+    - composer selfupdate --rollback
 
 before_script:
   # install wp tests infra
