--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     },
     "require-dev": {
         "php": ">=5.6",
-        "dealerdirect/phpcodesniffer-composer-installer": "^0.7.0",
+        "dealerdirect/phpcodesniffer-composer-installer": "^0.4.2 || ^0.7.0",
         "squizlabs/php_codesniffer": "^3.1",
         "phpunit/phpunit": "^5.7.27",
         "wimg/php-compatibility": "*",
