--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ matrix:
     - php: 8.0
       env: WP_MULTISITE=1 CUSTOM_CONSTANTS=1
     - dist: focal
-      php: 8.1.2
+      php: 8.1
 
 before_install:
   - '[[ "$TRAVIS_PHP_VERSION" != "7.2" ]] || export PHPUNIT_UPGRADE=1'
@@ -40,6 +40,7 @@ install:
 
   # Upgrade phpunit for php 7.3 and higher
   - if [ -z "$PHPUNIT_UPGRADE" ]; then rm composer.lock; fi
+  - if [ -z "$PHPUNIT_UPGRADE" ]; then composer config --no-plugins allow-plugins.dealerdirect/phpcodesniffer-composer-installer true; fi
   - if [ -z "$PHPUNIT_UPGRADE" ]; then composer require --no-interaction --dev phpunit/phpunit:9.3; fi
 
   # install dependencies using system provided composer binary
