--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "dealerdirect/phpcodesniffer-composer-installer": "^0.7.0",
         "squizlabs/php_codesniffer": "^3.1",
         "phpunit/phpunit": "^7.5.0",
-        "wimg/php-compatibility": "*",
+        "phpcompatibility/php-compatibility": "*",
         "wp-coding-standards/wpcs": "*",
         "yoast/phpunit-polyfills": "*"
     },
