--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,8 @@ matrix:
       env: WP_MULTISITE=1 CUSTOM_CONSTANTS=1
     - dist: focal
       php: 8.1
+    - dist: focal
+      php: 8.2
 
 before_install:
   - '[[ "$TRAVIS_PHP_VERSION" != "7.2" ]] || export PHPUNIT_UPGRADE=1'
