--- a/.travis.yml
+++ b/.travis.yml
@@ -30,15 +30,19 @@ matrix:
       env: WP_MULTISITE=1 CUSTOM_CONSTANTS=1
     - dist: focal
       php: 8.1
-    - dist: jammy
+    - dist: focal
       php: 8.2
 
 before_install:
   - '[[ "$TRAVIS_PHP_VERSION" != "7.2" ]] || export PHPUNIT_UPGRADE=1'
+  - '[[ "$TRAVIS_PHP_VERSION" == "8.2" ]] || export LIBONIG_INSTALL=1'
 
 install:
-    # flags to pass to install
+  # flags to pass to install
   - flags="--ansi --prefer-dist --no-interaction --optimize-autoloader --no-progress"
+
+  # for PHP 8.2 install libonig
+  - if [ -z "$LIBONIG_INSTALL" ]; then sudo apt-get install libonig5; fi
 
   # Upgrade phpunit for php 7.3 and higher
   - if [ -z "$PHPUNIT_UPGRADE" ]; then rm composer.lock; fi
