--- a/.travis.yml
+++ b/.travis.yml
@@ -38,11 +38,11 @@ before_install:
   - '[[ "$TRAVIS_PHP_VERSION" != "7.2" ]] || export PHPUNIT_UPGRADE=1'
 
 install:
+  # for PHP 8.2 install libonig
+  - if [ -n "$LIBONIG_INSTALL" ]; then sudo apt-get install libonig5; fi
+
   # flags to pass to install
   - flags="--ansi --prefer-dist --no-interaction --optimize-autoloader --no-progress"
-
-  # for PHP 8.2 install libonig
-  - if [ -z "$LIBONIG_INSTALL" ]; then sudo apt-get install libonig5; fi
 
   # Upgrade phpunit for php 7.3 and higher
   - if [ -z "$PHPUNIT_UPGRADE" ]; then rm composer.lock; fi
