--- a/.github/workflows/plugin-check.yml
+++ b/.github/workflows/plugin-check.yml
@@ -18,4 +18,5 @@ jobs:
       - name: Run plugin check
         uses: swissspidy/wp-plugin-check-action@main
         with:
-            exclude-directories: vendor
+            exclude-directories: 'vendor, classes/external'
+            exclude-checks: ''
