yet another attempt at making plugin checker exclude the external classes directory

--- a/.github/workflows/plugin-check.yml
+++ b/.github/workflows/plugin-check.yml
@@ -18,5 +18,5 @@ jobs:
       - name: Run plugin check
         uses: swissspidy/wp-plugin-check-action@main
         with:
-            exclude-directories: 'vendor', 'classes/external'
+            exclude-directories: 'vendor,classes/external'
             exclude-checks: ''
