Really too many false positives when testing for late_escaping.

--- a/.github/workflows/plugin-check.yml
+++ b/.github/workflows/plugin-check.yml
@@ -20,5 +20,6 @@ jobs:
         with:
             exclude-directories: 'vendor,classes/external'
             exclude-checks: |
+                late_escaping
                 plugin_review_phpcs
                 file_type
